# modo-tutorial

tutorial_01/: .gitignore  CMakeLists.txt
tutorial_01/_include/: cmd_hello.h
tutorial_01/_source/: cmd_hello.cpp  plugin.cpp
